###
# Project settings
###
[project]
name = "cars-forge"
description = "Create an on-demand/spot fleet of single or cluster EC2 instances."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Nikhil Patel", email = "npatel@cars.com"},
    {name = "Gabriele Ron", email = "gron@cars.com"},
    {name = "Joao Moreira", email = "jmoreira@cars.com"}
]

maintainers = [
    {name = "Nikhil Patel", email = "npatel@cars.com"},
    {name = "Gabriele Ron", email = "gron@cars.com"},
    {name = "Joao Moreira", email = "jmoreira@cars.com"}
]

keywords = [
    "AWS",
    "EC2",
    "Spot",
    "On-Demand",
    "Spark",
    "Cluster",
    "Jupyter"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]

dependencies = [
    "boto3",
    "pyyaml",
    "schema",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

dev = [
    "bump2version~=1.0",
]

[project.urls]
Homepage = "https://github.com/carsdotcom/cars-forge/"
Documentation = "https://carsdotcom.github.io/cars-forge/"
Changelog = "https://github.com/carsdotcom/cars-forge/blob/main/CHANGELOG.md"

[project.scripts]
forge = "forge.main:main"

###
# Build settings
###
[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.hatch.version]
path = "src/forge/__init__.py"

###
# Pytest settings
###
[tool.pytest.ini_options]
# Show coverage report with missing lines when running `pytest`
addopts = "--cov=forge --cov-report term-missing"
